--- a/em/skin/theme_resources/list.html
+++ b/em/skin/theme_resources/list.html
@@ -35,58 +35,36 @@
     <div id="upper-container">
         <div class="row no-v-padding header">
             <div class="twelve columns header">
-                <a href="#" class="main-logo-link"><div class="one column main-logo"></div></a>
-                <a href="#" class="main-title-link">
-                    <div class="five columns main-title">
-                        <h2>EngageMedia</h2>
-                        <p>Social justice and environmental video from the Asia Pacific</p>
-                    </div>
-                </a>
-                <div class="six columns offset-by-one search">
-                    <input type="text" id="searchGadget" class="text-input" name="searchGadget" value="Search EngageMedia">
+                <div class="five columns main-title">
+                    <p>Social justice and environmental video from the Asia Pacific</p>
                 </div>
-                <div class="six columns menu">
+                <div class="top-menu">
                     <ul class="header-menu-item" id="language-menu">
-                        <li class="header-button">
-                            <a href="#" class="english language"></a>
+                        <li>
+                            <a href="#" class="english language">English</a>
                         </li>
                         <li>
-                            <ul class="dropdown shade">
-                                <li>
-                                    <a href="#" class="english language">English</a>
-                                </li>
-                                <li>
-                                    <a href="#" class="indonesian language">Indonesian</a>
-                                </li>
-                            </ul>
+                            <a href="#" class="bahasa language">Bahasa Indonesia</a>
                         </li>
                     </ul>
                     <ul class="header-menu-item" id="user-menu">
-                        <li class="header-button">
+                        <li>
                             <a href="#" class="user">
                                 User
                             </a>
                         </li>
                         <li>
                             <ul class="dropdown shade">
-                                <li>
-                                    <a href="#">My Profile</a>
-                                </li>
-                                <li>
-                                    <a href="#">My Folder</a>
-                                </li>
-                                <li>
-                                    <a href="#">Admin</a>
-                                </li>
-                                <li>
-                                    <a href="#">Review List</a>
-                                </li>
-                                <li>
-                                    <a href="#">Log Out</a>
-                                </li>
                             </ul>
                         </li>
                     </ul>
+                </div>
+
+                <div class="six columns menu">
+                     <div class="search">
+                        <input type="text" id="searchGadget" class="text-input" name="searchGadget" value="Search EngageMedia">
+                    </div>
+                    
                     <ul class="header-menu-item" id="publish-menu">
                         <li class="header-button">
                             <a href="#" class="user">
@@ -95,21 +73,6 @@
                         </li>
                         <li>
                             <ul class="dropdown shade">
-                                <li>
-                                    <a href="#">My Profile</a>
-                                </li>
-                                <li>
-                                    <a href="#">My Folder</a>
-                                </li>
-                                <li>
-                                    <a href="#">Admin</a>
-                                </li>
-                                <li>
-                                    <a href="#">Review List</a>
-                                </li>
-                                <li>
-                                    <a href="#">Log Out</a>
-                                </li>
                             </ul>
                         </li>
                     </ul>
@@ -121,21 +84,6 @@
                         </li>
                         <li>
                             <ul class="dropdown shade">
-                                <li>
-                                    <a href="#">My Profile</a>
-                                </li>
-                                <li>
-                                    <a href="#">My Folder</a>
-                                </li>
-                                <li>
-                                    <a href="#">Admin</a>
-                                </li>
-                                <li>
-                                    <a href="#">Review List</a>
-                                </li>
-                                <li>
-                                    <a href="#">Log Out</a>
-                                </li>
                             </ul>
                         </li>
                     </ul>
@@ -252,6 +200,7 @@
                         </div>
                     </div>
                 </div>
+
 
                 <div class="six columns centered load-more"><a class="button large" href="#">Load More</a></div>
             </div>
