styling and layout improvements

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -67,7 +67,7 @@
                     
                     <ul class="header-menu-item" id="publish-menu">
                         <li class="header-button">
-                            <a href="#" class="user">
+                            <a class="user">
                                 Upload2
                             </a>
                         </li>
@@ -78,7 +78,7 @@
                     </ul>
                     <ul class="header-menu-item" id="browse-menu">
                         <li class="header-button">
-                            <a href="#" class="user">
+                            <a class="user">
                                 Browse
                             </a>
                         </li>
@@ -107,13 +107,10 @@
                         
                         <div class="description">
                             <h3>Witch Hunt Online</h3>
+                            <div class="video-meta">
+                                <span>By: </span><a href="#">papuanvoices</a>
+                            </div>
                             <p>International Freedom of Expression Exchange (IFEX) answers all you need to know about the coming World Press Freedom day on May 3, one of the most important days for honouring free expression. </p>
-                            <div class="video-meta">
-                                <span>Date: </span><a href="#">10/05/2012</a>
-                            </div>
-                            <div class="video-meta">
-                                <span>Author: </span><a href="#">papuanvoices</a>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -133,11 +130,11 @@
                 <div class="sidebar-section light-shade">
                     <div class="featured-filmmaker">
                         <a href="#">
-                            <img src="images/image_mini_2.png" class="featured-image">
                             <span class="featured-text">
                                 <h5>Featured Item </h5>
                                 International Freedom of Expression Exchange (IFEX) answers all you need to know about the coming World Press Freedom day. 
                             </span>
+                            <img src="images/image_mini_2.png" class="featured-image">
                         </a>
                     </div>
                 </div>
