--- a/em/skin/theme_resources/list.html
+++ b/em/skin/theme_resources/list.html
@@ -67,7 +67,7 @@
                     
                     <ul class="header-menu-item" id="publish-menu">
                         <li class="header-button">
-                            <a href="#" class="user">
+                            <a class="user">
                                 Upload2
                             </a>
                         </li>
@@ -78,7 +78,7 @@
                     </ul>
                     <ul class="header-menu-item" id="browse-menu">
                         <li class="header-button">
-                            <a href="#" class="user">
+                            <a class="user">
                                 Browse
                             </a>
                         </li>
