--- a/em/skin/theme_resources/video.html
+++ b/em/skin/theme_resources/video.html
@@ -68,7 +68,7 @@
                     
                     <ul class="header-menu-item" id="publish-menu">
                         <li class="header-button">
-                            <a href="#" class="user">
+                            <a class="user">
                                 Upload2
                             </a>
                         </li>
@@ -79,7 +79,7 @@
                     </ul>
                     <ul class="header-menu-item" id="browse-menu">
                         <li class="header-button">
-                            <a href="#" class="user">
+                            <a class="user">
                                 Browse
                             </a>
                         </li>
