fix links, add author cpt on rules.xml

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -35,9 +35,9 @@
     <div id="upper-container">
         <div class="row no-v-padding header">
             <div class="twelve columns header">
-                <div class="five columns main-title">
+                <a class="five columns main-title">
                     <p>Social justice and environmental video from the Asia Pacific</p>
-                </div>
+                </a>
                 <div class="top-menu">
                     <ul class="header-menu-item" id="language-menu">
                         <li>
@@ -108,15 +108,15 @@
                         <div class="description">
                             <h3>Witch Hunt Online</h3>
                             <div class="video-meta">
-                                <span>By: </span><a href="#">papuanvoices</a>
+                                <span>by </span><a href="#">papuanvoices</a>
                             </div>
                             <p>International Freedom of Expression Exchange (IFEX) answers all you need to know about the coming World Press Freedom day on May 3, one of the most important days for honouring free expression. </p>
                         </div>
                     </div>
                 </div>
 
-                <div class="full row no-v-padding row-title">
-                    <h4>Latest Videos</h4>
+                <div class="full row no-v-padding row-title" id="latest-videos-title">
+                    <h4 title="latest videos" >Latest Videos</h4>
                     <a href="#" class="rss icon"></a>
                 </div>
                 <div class="row" id="latestvideos">
@@ -191,7 +191,7 @@
                         </a>
                     </div>
                     <div class="column-more">
-                        <a href="#">More Projects</a>
+                        <a href="projects" id="more-projects">More Projects</a>
                     </div>
                 </div>
             </div>
@@ -206,7 +206,7 @@
                         <li><a href="#"><p class="date">May, 16</p><h5>Engagemedia Ventures Into Thailand, Sprouting Projects And Partnerships</h5></a></li>
                     </ul>
                     <div class="column-more">
-                        <a href="#" id="more-news">More...</a>
+                        <a href="#" id="more-blogs">More...</a>
                     </div>
                 </div>
             </div>
