--- a/em/skin/theme_resources/text.html
+++ b/em/skin/theme_resources/text.html
@@ -35,9 +35,9 @@
         <div id="upper-container">
         <div class="row no-v-padding header">
             <div class="twelve columns header">
-                <div class="five columns main-title">
+                <a class="five columns main-title">
                     <p>Social justice and environmental video from the Asia Pacific</p>
-                </div>
+                </a>
                 <div class="top-menu">
                     <ul class="header-menu-item" id="language-menu">
                         <li>
