pre-deployment fixes

--- a/em/skin/theme_resources/list.html
+++ b/em/skin/theme_resources/list.html
@@ -257,9 +257,9 @@
         </div>
         <div class="row footer">
             <div class="colophon"><a href="http://plumi.org">
-                powered by <b>Plumi</b> <span class="plumi-logo"></span> - Except where otherwise noted, content on this site is licensed under a <b><a href="#">Creative Commons Attribution 3.0 Australia Licence.</a></b>
-                
-            </a></div>
+                powered by <b>Plumi</b> <span class="plumi-logo"></span></a> - Except where otherwise noted, content on this site is licensed under a <b><a href="http://creativecommons.org/licenses/by/3.0/au/">Creative Commons Attribution 3.0 Australia Licence.</a></b>
+
+            </div>
         </div>
     </div>
     <span id="javascript_at_bottom"></span>      
