--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -273,9 +273,9 @@
         </div>
         <div class="row footer">
             <div class="colophon"><a href="http://plumi.org">
-                powered by <b>Plumi</b> <span class="plumi-logo"></span> - Except where otherwise noted, content on this site is licensed under a <b><a href="#">Creative Commons Attribution 3.0 Australia Licence.</a></b>
+                powered by <b>Plumi</b> <span class="plumi-logo"></span></a> - Except where otherwise noted, content on this site is licensed under a <b><a href="http://creativecommons.org/licenses/by/3.0/au/">Creative Commons Attribution 3.0 Australia Licence.</a></b>
                 
-            </a></div>
+            </div>
         </div>
     </div>
     <span id="javascript_at_bottom"></span>      
