update video and text templates with th new footer style

--- a/em/skin/theme_resources/text.html
+++ b/em/skin/theme_resources/text.html
@@ -135,15 +135,13 @@ There are over AUD1000 in prizes and winners will be invited to a master class o
     <div class="listingBar"></div> <!-- for the video listings -->
     </div>
     <div class="row separate-thick"></div>
+
     <div id="lower-container">
         <div class="row footer">
-            <div class="six columns">
-                <div class="logo"></div>
+            <div class="three columns engage">
+                <h5>EngageMedia</h5>
             </div>
-        </div>
-        <div class="row footer">
-            
-            <div class="three columns offset-by-three">
+            <div class="three columns">
                 <h5>About Us</h5>
                 <ul id="navigation-tree">
                     <li>Editorial Policy</li>
