--- a/em/skin/theme_resources/video.html
+++ b/em/skin/theme_resources/video.html
@@ -243,13 +243,11 @@
 
     <div id="lower-container">
         <div class="row footer">
-            <div class="six columns">
-                <div class="logo"></div>
+            <div class="three columns engage">
+                <h5>EngageMedia</h5>
             </div>
-        </div>
-        <div class="row footer">
             
-            <div class="three columns offset-by-three">
+            <div class="three columns">
                 <h5>About Us</h5>
                 <ul id="navigation-tree">
                     <li>Editorial Policy</li>
