styling changes mainly

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -233,7 +233,7 @@
                 <h5>EngageMedia</h5>
             </div>
             <div class="three columns">
-                <h5>About Us</h5>
+                <a href="/about-us"><h5>About Us</h5></a>
                 <ul id="navigation-tree">
                     <li>Editorial Policy</li>
                     <li>Help</li>
@@ -243,7 +243,7 @@
                 </ul>
             </div>
             <div class="three columns">
-                <h5>Our Projects</h5>
+                <a href="/Projects"><h5>Our Projects</h5></a>
                 <ul id="projects-tree">
                     <li>Technology</li>
                     <li>Research & Publications</li>
@@ -265,8 +265,8 @@
                     <li>Contact Us</li>   
                     <li>
                         <span class="social-title">Social Media</span>
-                        <span class="fb"></span>
-                        <span class="twitter"></span>
+                        <a href="http://www.facebook.com/group.php?gid=43640854087"><span class="fb"></span></a>
+                        <a href="http://twitter.com/EngageMedia"><span class="twitter"></span></a>
                     </li>                 
                 </ul>
             </div>
