--- a/em/skin/theme_resources/text.html
+++ b/em/skin/theme_resources/text.html
@@ -142,7 +142,7 @@ There are over AUD1000 in prizes and winners will be invited to a master class o
                 <h5>EngageMedia</h5>
             </div>
             <div class="three columns">
-                <h5>About Us</h5>
+                <a href="/about-us"><h5>About Us</h5></a>
                 <ul id="navigation-tree">
                     <li>Editorial Policy</li>
                     <li>Help</li>
@@ -152,7 +152,7 @@ There are over AUD1000 in prizes and winners will be invited to a master class o
                 </ul>
             </div>
             <div class="three columns">
-                <h5>Our Projects</h5>
+                <a href="/Projects"><h5>Our Projects</h5></a>
                 <ul id="projects-tree">
                     <li>Technology</li>
                     <li>Research & Publications</li>
