--- a/em/skin/theme_resources/video.html
+++ b/em/skin/theme_resources/video.html
@@ -248,7 +248,7 @@
             </div>
             
             <div class="three columns">
-                <h5>About Us</h5>
+                <a href="/about-us"><h5>About Us</h5></a>
                 <ul id="navigation-tree">
                     <li>Editorial Policy</li>
                     <li>Help</li>
@@ -258,7 +258,7 @@
                 </ul>
             </div>
             <div class="three columns">
-                <h5>Our Projects</h5>
+                <a href="/Projects"><h5>Our Projects</h5></a>
                 <ul id="projects-tree">
                     <li>Technology</li>
                     <li>Research & Publications</li>
