--- a/em/skin/theme_resources/video.html
+++ b/em/skin/theme_resources/video.html
@@ -14,7 +14,7 @@
   <title>EngageMedia</title>
 
   <!-- Included Google Webfont -->
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans|Arimo:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=PT+Sans|Arimo:400,700' rel='stylesheet' type='text/css'>
 
   <!-- Included CSS Files -->
   <link rel="stylesheet" href="stylesheets/foundation.css">
@@ -26,7 +26,7 @@
 
     <!-- IE Fix for HTML5 Tags -->
   <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     
     <span id="css"></span>
