author page and list page footer fixes

--- a/em/skin/theme_resources/list.html
+++ b/em/skin/theme_resources/list.html
@@ -210,14 +210,11 @@
 
     <div id="lower-container">
         <div class="row footer">
-            <div class="six columns">
-                <div class="logo"></div>
-            </div>
-        </div>
-        <div class="row footer">
-            
-            <div class="three columns offset-by-three">
-                <h5>About Us</h5>
+            <div class="three columns engage">
+                <h5>EngageMedia</h5>
+            </div>            
+            <div class="three columns">
+                <a href="/about-us"><h5>About Us</h5></a>
                 <ul id="navigation-tree">
                     <li>Editorial Policy</li>
                     <li>Help</li>
@@ -227,7 +224,7 @@
                 </ul>
             </div>
             <div class="three columns">
-                <h5>Our Projects</h5>
+                <a href="/Projects"><h5>Our Projects</h5></a>
                 <ul id="projects-tree">
                     <li>Technology</li>
                     <li>Research & Publications</li>
@@ -236,7 +233,7 @@
                     <li>Translations</li>
                 </ul>
             </div>
-            <div class="three columns">
+            <div class="three columns" id="newsletter-footer">
                 <h5>Stay In Touch</h5>
                 <ul>
                     <li>
