--- a/em/skin/theme_resources/text.html
+++ b/em/skin/theme_resources/text.html
@@ -174,8 +174,8 @@ There are over AUD1000 in prizes and winners will be invited to a master class o
                     <li>Contact Us</li>   
                     <li>
                         <span class="social-title">Social Media</span>
-                        <span class="fb"></span>
-                        <span class="twitter"></span>
+                        <a href="http://www.facebook.com/group.php?gid=43640854087"><span class="fb"></span></a>
+                        <a href="http://twitter.com/EngageMedia"><span class="twitter"></span></a>
                     </li>                 
                 </ul>
             </div>
