--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -253,7 +253,7 @@
                 </ul>
             </div>
             <div class="three columns" id="newsletter-footer">
-                <h5>Stay In Touch</h5>
+                <h5>Stay In Touch2</h5>
                 <ul>
                     <li>
                         Subscribe to our Newsletter
